<resources>
    <string name="title_tab_order">Đơn hàng</string>
    <string name="title_tab_notification">Thông báo</string>
    <string name="title_tab_report">Báo cáo</string>
    <string name="title_tab_user">Tài khoản</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Caro</string>
    <string name="FACEBOOK_APP_ID">455712164964058</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">7fe524aae88dce96ce5c5704d0463c07</string>
    <string name="permissions_read_phone_state_message">
        Grant permission to read your phone number from your device to pre-fill.
    </string>
    <string name="permissions_read_phone_state_title">Read Phone Number</string>
    <string name="permissions_receive_sms_message">
        Grant permission to read your SMS code from your device to pre-fill.
    </string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Menu</string>
    <string name="nav_about_us">About Us</string>
    <string name="scan_code_title">Quét QR</string>
    <string name="scan_code_status">Di chuyển camera đến vùng chứa mã QR để quét.</string>
    <string name="scan_code_error">Không tìm thấy đơn hàng. Bạn vui lòng quét lại.</string>
    <string name="scan_code_fail">Mã vạch không đúng. Bạn vui lòng quét lại.</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="select_time_report_title">Hôm nay</string>
    <string name="select_time_report_week">Tuần này</string>
    <string name="select_time_report_month">Tháng này</string>
    <string name="select_time_report_custom">Tuỳ chọn</string>
    <string name="menu_priority_normal">Bình thường</string>
    <string name="menu_priority_high">Nhanh</string>
    <string name="menu_priority_highest">Gấp</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="select_store">Chọn cửa hàng</string>
    <string name="store_empty">Hiện tại, không có cửa hàng nào có đơn.</string>
    <string name="store_all_defaul">Tất cả</string>
    <string name="tab_order_receiver">Đang nhận</string>
    <string name="tab_order_delivering">Đang giao</string>
    <string name="tab_order_delivery_fail">Thất bại</string>
    <string name="tab_order_wait_confirm">Chờ xác nhận</string>
    <string name="detail_order_title">Chi tiết đơn hàng</string>
    <string name="order_note"><![CDATA[<b>Ghi chú:</b> %s]]></string>
    <string name="order_content"><![CDATA[%s]]></string>
    <string name="order_content_product" formatted="true"><b>%s</b> Số lượng: %d<br/></string>
    <string name="message_phone_empty">Chưa có số điện thoại</string>
    <string name="reason_fail_title">Lý do thất bại</string>
    <string name="reason_fail_order_title">Lý do bạn không giao được hàng</string>
    <string name="reason_fail_order_error">Bạn cần có lý do thất bại.</string>
    <string name="reason_fail_order_1">Không liên lạc được người nhận</string>
    <string name="reason_fail_order_2">Sai địa chỉ người nhận</string>
    <string name="reason_fail_order_3">Người nhận từ chối nhận hàng</string>
    <string name="reason_fail_order_4">Người nhận hẹn giao hàng thời điểm khác</string>
    <string name="reason_fail_order_other">Lý do khác:</string>
    <string name="reason_fail_order_hint">nhập lý do</string>
    <string name="ok">OK</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="api_default_error">Lỗi kết nối</string>
    <string name="api_retry_error">Lỗi kết nối</string>
    <string name="connection_error">Kết nối có vấn đề</string>
    <string name="pick_up_location_hint">Chọn điểm đón</string>
    <string name="drop_off_location_hint">Chọn điểm đến</string>
    <string name="btn_car">Đặt xe</string>
    <string name="btn_ware_car">Vẫy xe</string>
    <string name="btn_select_address">Chọn Điểm</string>
    <string name="finding_location">Đang lấy vị trí&#8230;</string>
    <string name="finding_location_error">Không lấy được địa chỉ</string>
    <string name="search_address_hint">Nhập địa chỉ</string>
    <string name="finding_location_on_map">Chọn địa điểm trên bản đồ</string>
    <string name="pick_car">CHỌN XE</string>
    <string name="promotion">Khuyến mại</string>
    <string name="note">Ghi chú</string>
    <string name="route_title">Lộ trình</string>
    <string name="edit_pick_caro">Chỉnh sửa đặt xe</string>
    <string name="pick_caro_type">Đặt xe CARO 4 chỗ</string>
    <string name="state_findding_driver">Đang tìm tài xế ở gần chỗ bạn..</string>
    <string name="state_find_driver">Đã tìm tài xế ở gần bạn..</string>
    <string name="btn_status_finish">Hoàn thành</string>
    <string name="btn_status_cancel">Huỷ chuyến</string>
    <string name="btn_rating">Kết thúc</string>
    <string name="text_ware_description">Bạn có muốn vẫy xe nhanh?</string>
    <string name="type_caro_4">Xe 4 chỗ</string>
    <string name="type_caro_7">Xe 7 chỗ</string>
    <string name="type_caro_airport">Xe sân bay</string>
    <string name="close_app_confirm">Bạn có chắc chắn muốn thoát ứng dụng</string>
    <string name="delivery_order_success_confirm">Bạn đã giao hàng thành công?</string>
    <string name="cancel">Huỷ</string>
    <string name="done">Xong</string>
    <string name="title_address_source">Điểm đến</string>
    <string name="message_get_address_error">Bạn chưa lấy được địa chỉ</string>
    <string name="message_searching_driver">Đang tìm tài xế gần bạn..</string>
    <string name="payment_title">Thanh toán</string>
    <string name="time_countdown_format_comming"><![CDATA[Còn <font color=\"#8b37fe\">%d phút</font> sẽ tới]]></string>
    <string name="time_countdown_format_waiting"><![CDATA[<font color=\"#ff00cd\">Khởi hành 4 phút nữa</font>]]></string>
    <string name="time_countdown_format_moving"><![CDATA[Đến nơi lúc <font color=\"#8b37fe\">%s</font>]]></string>
    <string name="menu_bottom_sheet_change_pickup">Thay đổi điểm đón</string>
    <string name="menu_bottom_sheet_change_dropoff">Thay đổi điểm đến</string>
    <string name="menu_bottom_sheet_add_dropoff">Thêm điểm dừng</string>
    <string name="menu_bottom_sheet_cancel">Huỷ chuyến</string>
    <string name="menu_bottom_sheet_finish">Hoàn thành</string>
    <string name="menu_bottom_sheet_close">Đóng</string>
    <string name="rating_message">Vui lòng đánh giá dịch vụ của chúng tôi</string>
    <string name="rating_feedback">Phản hồi</string>
    <string name="rating_feedback_hint">Viết phản hồi của bạn</string>
    <string name="menu_profile_notification">Thông báo</string>
    <string name="menu_profile_card_promotion">Thẻ khuyến mại</string>
    <string name="menu_profile_history">Lịch sử</string>
    <string name="menu_profile_payment">Thanh toán</string>
    <string name="menu_profile_contact_sos">Liên hệ khẩn cấp</string>
    <string name="menu_profile_support">Hỗ trợ - Khiếu nại</string>
    <string name="menu_profile_pick_airport">Đặt xe sân bay</string>
    <string name="menu_become_driver">Tài xế</string>
    <string name="menu_version_app">Phiên bản %s</string>
    <string name="edit_favourite">Chỉnh sửa</string>
    <string name="edit_favourite_done">Xong</string>
    <string name="favourite_title">Điểm ưa thích</string>
    <string name="favourite_add">+ Thêm điểm ưa thích</string>
    <string name="favourite_home">Nhà riêng</string>
    <string name="favourite_company">Cơ quan</string>
    <string name="favourite_message">Nhập địa điểm bạn muốn lưu</string>
    <string name="favourite_btn_add">Thêm điểm ưa thích</string>
    <string name="message_empty_error">Bạn chưa nhập đủ thông tin</string>
    <string name="message_cant_delete_favourite">Bạn không thể xoá điểm này</string>
    <string name="btn_select">Chọn</string>
    <string name="promotion_card">Chọn Ship Muốn Đổi</string>
    <string name="promotion_card_des">Thẻ khuyến mại giúp bạn có những chuyến đi dễ dàng hơn.</string>
    <string name="rating_booking_succes">Đánh giá tài xế thành công.</string>
    <string name="rating_booking_star_empty">Bạn chưa nhấp số sao</string>
    <string name="message_source_empty">Xin lỗi, Bạn cần lấy vị trí hiện tại của mình.</string>
    <string name="message_service_not_avaiable">Xin lỗi, tính năng đang cập nhật.</string>
    <string name="message_promo_not_destination">Bạn chưa nhập điểm đến</string>
    <string name="message_cancel_booking_success">Bạn đã huỷ chuyến thành công.</string>
    <string name="message_find_driver_error">Xin lỗi, Không tìm thấy tài xế.</string>
    <string name="message_driver_cancel_booking">Xin lỗi , tài xế đã huỷ chuyến.</string>
    <string name="message_booking_price_empty">Xin lỗi, hệ thống chưa lấy được giá</string>
    <string name="booking_price_title">Cước phí</string>
    <string name="booking_promo_title">Khuyến mại</string>
    <string name="expire_date">Hạn sử dụng</string>
    <string name="btn_order_delivering">Đi giao</string>
    <string name="btn_order_move_stock">Về kho</string>
    <string name="btn_order_swap_ship">Đổi ship</string>
    <string name="history_address_empty">Chưa có địa chỉ</string>
    <string name="prompt_email">Số điện thoại</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>