<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/title_tab_order" />

    <item
        android:id="@+id/navigation_notificaiton"
        android:icon="@drawable/ic_menu_favorite"
        android:title="@string/title_tab_notification" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_menu_promotion"
        android:title="@string/title_tab_report" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/title_tab_user" />

</menu>
